# ESTCPOSDA

./: .gitignore  CMakeLists.txt
Exercise4/: CMakeLists.txt  README.md
Exercise4/Asteroids/: main.cpp
Exercise4/Asteroids/Game/Asteroid/: FishRenderComponent.cpp
Exercise4/Asteroids/Game/AsteroidSpawner/: AsteroidSpawner.cpp  AsteroidSpawner.h  FishSpawner.cpp
Exercise4/Asteroids/Game/Colliders/: BoxCollider.cpp  BoxCollider.h
Exercise4/Asteroids/Game/Enums/: AsteroidSpawnerPositions.h
Exercise4/Asteroids/Game/Fish/: FishRenderComponent.cpp  (+3 more)
Exercise4/Asteroids/data/: fish_sprites.json
Exercise4/Engine/Engine/: BoxCollider.cpp  BoxCollider.h  BoxColliderComponent.cpp  CollisionContext.cpp  CollisionContext.h  ConcreteStrategyAABB.h  ConcreteStrategyGJK.h  FishColliderComponent.h  MyEngine.h  Strategy.h  fishCollider.cpp  fishCollider.h
FinalProject/Engine/: CMakeLists.txt
FinalProject/Engine/Engine/: BoxColliderComponent.cpp  BoxColliderComponent.h  CollisionContext.cpp  CollisionContext.h  ConcreteStrategyAABB.cpp  ConcreteStrategyAABB.h  ConcreteStrategyGJK.h  FishColliderComponent.cpp  GameObject.h  MyEngine.cpp  MyEngine.h  Strategy.h
FinalProject/Simulation/: CMakeLists.txt
FinalProject/Simulation/Game/Enums/: FishSpawnerPositions.h
FinalProject/Simulation/Game/Fish/: FishRenderComponent.cpp  FishUpdateComponent.cpp  FishUpdateComponent.h
FinalProject/Simulation/Game/FishSpawner/: FishSpawner.cpp  FishSpawner.h
FinalProject/Simulation/Game/GameManager/: GameManager.cpp  GameManager.h
GameProgramming23/Ex3/: CMakeLists.txt
(+12 files in other folders)
